chore: Basic modifications on index and contact json

--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,6 @@
     <base href="/">
   </head>
   <body ng-app="app" ng-strict-di ng-cloak>
-
-    <app>
-      Loading...
-    </app>
+    <app></app>
   </body>
 </html>
